and the type of output (now object with class `BASiCS_ResultVG`). 
- Unit tests for LVG updated as new default value for `ProbThreshold` is used 
whenever the EFDR calibration fails (2/3 as opposed to 0.5).
- Minor changes in `BASiCS_VarThresholdSearch` to avoid errors in the presence
or absence of epsilon. This function is likely to be deprecated. 
- Updates default probability threshold in `.ThresholdSearch` when EFDR 
calibration fails. This is now set to `ProbThreshold` (not 0.9)

version 2.1.5 (2020-08-05)
- Minor change on the definition of `OrderVariable` within `BASiCS_DetectVG`

version 2.1.6 (2020-08-05)
- Prevents usage of `BASiCS_VarThresholdSearchVG` when using residual
overdispersion parameters

version 2.1.7 (2020-09-01)
- Bugfix in format method for ResultVG class.
- For `BASiCS_PlotDE`, if only one plot is produced, the plot is returned as
  a bare ggplot object rather than using `cowplot::plot_grid`
- Added `EpsilonThreshold` argument for `BASiCS_DetectHVG` and `BASiCS_DetectLVG`.
  This uses a threshold on epsilon values to identify LVGs and HVGs.
- Deprecated `newBASiCS_Data` and the `format` methods for Results classes.
  For the latter, use `as.data.frame` instead.
- Improved documentation for BASiCS_ResultVG class
- `BASiCS_MCMC` now computes and stores ESS as an attribute of parameter
  matrices when sampling has completed. 
- Make use of Parameter argument consistent across several methods, where Param
  and Which were used before.
- Extended BASiCS_DiagPlot to enable other diagnostic measures
- Moved to store molecule counts in `rowData(altExp(sce))` rather than `metadata(sce)`
- Remove dependency to KernSmooth
- Set some values to NA if they relate to genes captured in < 2 cells
- Add option to exclude spike-ins in `BASiCS_DenoisedCounts`.
  Also use a slightly more principled calculation internally.
- See issues #182, #39, #91, #169, #181, #178, #202, #190, #173